--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -200,9 +200,10 @@
   white-space: nowrap;
   color: #CCCCCC;
 }
-
-.star-rating:before,
-.star-rating:after {
+.star-rating#text{
+  color: #000;
+}
+.star-rating:before {
   content: '★★★★★';
 }
 
@@ -213,40 +214,48 @@
   left: 0;
   overflow: hidden;
   white-space: nowrap;
+  content: '★★★★★';
   color: #F29F05;  
+  width: 0%;
 }
 
-.star-rating[data-rate="5"]:after {
+.star-rating[data-rate^="5"]:after,
+.star-rating[data-rate="5.0"]:after {
   width: 100%;
 }
 .star-rating[data-rate="4.5"]:after {
   width: 90%;
 }
-.star-rating[data-rate="4"]:after {
+.star-rating[data-rate^="4"]:after,
+.star-rating[data-rate="4.0"]:after {
   width: 80%;
 }
 .star-rating[data-rate="3.5"]:after {
   width: 70%;
 }
-.star-rating[data-rate="3"]:after {
+.star-rating[data-rate^="3"]:after,
+.star-rating[data-rate="3.0"]:after {
   width: 60%;
 }
 .star-rating[data-rate="2.5"]:after {
   width: 50%;
 }
-.star-rating[data-rate="2"]:after {
-  width: 40%;
+.star-rating[data-rate^="2"]:after,
+.star-rating[data-rate="2.0"]:after {
+  width: 39%;
 }
 .star-rating[data-rate="1.5"]:after {
   width: 30%;
 }
-.star-rating[data-rate="1"]:after {
+.star-rating[data-rate^="1"]:after,
+.star-rating[data-rate="1.0"]:after {
   width: 20%;
 }
 .star-rating[data-rate="0.5"]:after {
   width: 10%;
 }
-.star-rating[data-rate="0"]:after {
+.star-rating[data-rate^="0"]:after,
+.star-rating[data-rate="0.0"]:after {
   width: 0%;
 }
 
@@ -280,4 +289,78 @@
 }
 
 
+/* ====================================
+    review
+==================================== */
 
+
+/* 選択された星とその前の星を金色にする */
+.star-rating-create input:checked ~ label,
+.star-rating-create label:hover,
+.star-rating-create label:hover ~ label {
+ color: gold; 
+}
+
+/* 星評価のコンテナ */
+
+#id_stars {
+  display: flex; 
+  justify-content: center;
+}
+
+/* .star-rating-create{
+  display: flex;
+  justify-content: center;
+  align-items: center;;
+} */
+
+.star-rating-create label {
+  color: #ccc;
+  padding: 0 0.7em;
+  width: 1rem; 
+  font-size: 3.0rem;
+  position: relative;
+  cursor: pointer; 
+}
+@media (max-width: 768px) {
+  .star-rating-create label {
+    padding: 0 0.7em;
+    width: 1rem; 
+    font-size: 1.85rem;
+  }
+}
+
+
+.star-rating-create input {
+  /* input自体は非表示にする */
+  display: none;
+}
+
+
+
+/* 選択された星とその前の星を金色にする */
+#id_stars div:has(input:checked) label {
+  color: gold; 
+}
+#id_stars:hover div label {
+  color: gold; 
+}
+#id_stars div:hover ~ div label {
+  color: #ccc; 
+}
+#id_stars div:has(input:checked) ~ div label {
+  color: #ccc; 
+}
+#id_stars div:has(input) label {
+  color: gold; 
+}
+
+/* 必須入力のマーク */
+.required-tag {
+  background-color: #dc3545;
+  color: white;
+  padding: 2px 6px;
+  border-radius: 4px;
+  font-size: 0.75rem;
+  margin-left: 8px;
+}
