--- a/templates/pages/favorites.html
+++ b/templates/pages/favorites.html
@@ -31,8 +31,8 @@
                                     <hr class="my-2">
                                     <p class="card-text small mb-1">{{ favorite.shop.description|linebreaksbr }}</p>
                                     <p class="mb-1">
-                                        <span class="star-rating me-1" data-rate="0"></span>
-                                        0（0件）=sample=
+                                        <span class="star-rating me-1" data-rate="{{ favorite.shop.average_rating|floatformat:1 }}"></span>
+                                        {{ favorite.shop.average_rating|floatformat:1 }}（{{ favorite.shop.review_count }}件）
                                     </p>
                                     <div class="mt-3 d-flex justify-content-between align-items-center">
                                         <p class="card-text small mb-2">
