--- a/templates/snippets/shop_box.html
+++ b/templates/snippets/shop_box.html
@@ -7,8 +7,8 @@
             <span>{{ object.category.name }}</span>
         </div>
         <p class="card-text">
-            <span class="star-rating me-1" data-rate="4"></span>
-            4.13 =sample=
+            <span class="star-rating me-1" data-rate="{{ object.average_rating|floatformat:1 }}"></span>
+            {{ object.average_rating|floatformat:1 }}（{{ object.review_count }}件）
         </p>
     </div>
 </div>
