1025 commit Update:image

--- a/templates/pages/favorites.html
+++ b/templates/pages/favorites.html
@@ -23,7 +23,7 @@
                     <div class="card h-100">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="{{ favorite.shop.image }}" class="card-img-top rounded-start h-100 object-fit-cover">
+                                <img src="{{ favorite.shop.image.url }}" class="card-img-top rounded-start h-100 object-fit-cover">
                             </div>
                             <div class="col-md-8">
                                 <div class="card-body">
