--- a/templates/pages/restaurants_detail.html
+++ b/templates/pages/restaurants_detail.html
@@ -56,7 +56,7 @@
 
                 <!-- 4. 写真 -->
                 <div class="mb-4">
-                    <img src="{{ shop.image }}" class="w-100">
+                    <img src="{{ shop.image.url }}" class="w-100">
                 </div>
 
                 <div class="p-3 mb-4">
