--- a/templates/pages/restaurants_list.html
+++ b/templates/pages/restaurants_list.html
@@ -137,10 +137,10 @@
                     <div class="card h-100">
                         <div class="row g-0">
                             <div class="col-md-4">
-                                <img src="{{ shop.img }}" class="card-img-top horizontal-card-image">                            </div>
+                                <img src="{{ shop.image.url }}" class="card-img-top horizontal-card-image">                            </div>
                             <div class="col-md-8">
                                 <div class="card-body">
-                                    <h3 class="card-title">{{ shop.name }}</h3>
+                                    <h3 class="card-title" style="color: #000;text-shadow: none;">{{ shop.name }}</h3>
                                     <hr class="my-2">
                                     <p class="mb-1">
                                         <span class="star-rating me-1" data-rate="{{ shop.average_rating|floatformat:1 }}"></span>
