--- a/templates/pages/reserve_list.html
+++ b/templates/pages/reserve_list.html
@@ -49,7 +49,7 @@
                 </ul>
                 
                 {% else %}
-                <div class="alert alert-info text-center mt-5" role="alert">
+                <div class="alert alert-secondary text-center mt-5" role="alert">
                     現在、確定されたご予約はありません。
                 </div>
             {% endif %}
