--- a/templates/base.html
+++ b/templates/base.html
@@ -22,9 +22,12 @@
     <!-- swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
     <!-- CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+
     <link rel="stylesheet" href="{% static 'assets/css/common.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
-    <style>
+    {% block extra_css %}{% endblock %}
+<style>
        
     </style>
 </head>
@@ -54,7 +57,11 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ja.js"></script>
+
 <script src="{% static 'assets/js/common.js' %}"></script>
+{% block extra_js %}{% endblock %}
 </body>
 
 </html>
