--- a/templates/pages/account_mypage.html
+++ b/templates/pages/account_mypage.html
@@ -18,14 +18,13 @@
 
             <!-- マイページメニュー  -->
             <div class="card shadow-sm">
-                <div class="list-group list-group-flush">
-                    
+                <div class="list-group list-group-flush">                    
                     <!-- 1. 会員情報の変更 (リンク先は一つ前のファイル user_edit.html のパスを想定) -->
                     <a href="{% url 'account_detail' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                         会員情報の確認・変更
                         <span class="text-muted">></span>
                     </a>
-                    
+                    {% if user.is_paymentstatus and not is_reviewed %}
                     <!-- 2. 支払い情報の変更 -->
                     <a href="/payment/edit" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                         支払い情報の変更
@@ -43,13 +42,25 @@
                         予約一覧
                         <span class="text-muted">></span>
                     </a>
+                    {% endif %}
+
+                    <!-- 無料会員の場合 -->
+                    <!-- 5. 有料会員の登録 -->
+                    {% if not user.is_paymentstatus %}                    
+                    <a href="{% url 'reserve_list' %}" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                        有料プランの登録
+                        <span class="text-muted">></span>
+                    </a>
+                    {% endif %}
                 </div>
 
                 <!-- 5. 有料会員を退会する (目立つボタンで表現) -->
                 <div class="card-body border-top">
+                    {% if user.is_paymentstatus and not is_reviewed %}
                     <a href="/subscription/cancel" class="btn btn-outline-danger w-100 mb-3 shadow-sm">
                         有料会員を退会する
                     </a>
+                    {% endif %}
 
                     <a href="{% url 'logout' %}" class="btn btn-outline-secondary w-100 shadow-sm">
                         ログアウト
