1211 commit edit:index.html

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -7,9 +7,9 @@
     <div>
         <div class="swiper">
             <div class="swiper-wrapper">    
-                <div class="swiper-slide"><img src="https://nagoyameshi-pattern-1.herokuapp.com/images/main1.jpg"></div>
-                <div class="swiper-slide"><img src="https://nagoyameshi-pattern-1.herokuapp.com/images/main2.jpg"></div>
-                <div class="swiper-slide"><img src="https://nagoyameshi-pattern-1.herokuapp.com/images/main3.jpg"></div> 
+                <div class="swiper-slide"><img src="{% static 'assets/images/main1.jpg' %}"></div>
+                <div class="swiper-slide"><img src="{% static 'assets/images/main2.jpg' %}"></div>
+                <div class="swiper-slide"><img src="{% static 'assets/images/main3.jpg' %}"></div> 
                 <div class="d-flex overlay-background">
                     <div class="container mv-content overlay-text">
                         <h1>甘くて。<br>辛くて。<br><span class="fcog">茶</span>色いあの味。</h1>
