--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -113,6 +113,23 @@
     color: #fff;
 }
 
+@media screen and (max-width: 767px) {
+  .search{
+    padding: 15px 0 10px;
+    width: 94%;
+  }
+  .search_ttl{
+    font-family: "Tilt Warp", sans-serif;
+    font-size: 1.9rem;
+  }
+  .search_ttl img{
+    width: 35px;
+  }
+  .user-search-box {
+    width: 90%;
+  }
+}
+
 /* ====================================
     item
 ==================================== */
@@ -280,7 +297,7 @@
     }
 
     .mv-content h1 {
-        font-size: 54px;
+        font-size: 47px;
     }
 
     .mv-content p {
@@ -322,7 +339,7 @@
   position: relative;
   cursor: pointer; 
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .star-rating-create label {
     padding: 0 0.7em;
     width: 1rem; 
