--- a/templates/pages/restaurants_list.html
+++ b/templates/pages/restaurants_list.html
@@ -24,7 +24,7 @@
 <div class="container sec pb-5">
 
     <div class="row justify-content-center">
-        <div class="col-xl-3 col-lg-4 col-md-12">
+        <div class="col-xl-3 col-lg-4 col-md-12 pc">
             <div class="card mb-3">
                 <div class="card-header">
                     カテゴリから探す
@@ -120,7 +120,78 @@
             <!-- ページネーション後日実装予定 -->
 
         </div>
+
+        
     </div>
 </div>
 
+<div class="search bgbge">
+    <h2 class="search_ttl"><img src="../static/assets/images/img_icon01.png" alt="">SEARCH</h2>
+    <span class="search_subttl">お店を探す</span>
+    <form method="GET" action="{% url 'restaurants_list' %}" class="user-search-box">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="店舗名・エリア・カテゴリ" name="keyword" value="{{ shop.GET.keyword }}">
+            <button type="submit" class="btn search_btn shadow-sm">検索</button>
+        </div>
+    </form>
+</div>
+<!-- spのみ -->
+<div class="container sec pb-5">
+
+<div class="row justify-content-center">
+        <div class="col-xl-3 col-lg-4 col-md-12 sp">
+            <div class="card mb-3">
+                <div class="card-header">
+                    カテゴリから探す
+                </div>
+                <div class="card-body">
+                    <form method="GET" action="{% url 'restaurants_list' %}" class="w-100">
+                        <div class="form-group mb-3">
+                            <select class="form-control form-select" name="category_id" required>
+                                <option value="" hidden>選択してください</option>
+                                {% for category in categories %}
+                                {% if category.id == category_id %}
+                                <option value="{{ category.id }}" selected>{{ category.name }}</option>
+                                {% else %}
+                                <option value="{{ category.id }}">{{ category.name }}</option>
+                                {% endif %}
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn search_btn text-white shadow-sm w-100">検索</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <div class="card mb-3">
+                <div class="card-header">
+                    エリアから探す
+                </div>
+                <div class="card-body">
+                    <form method="GET" action="{% url 'restaurants_list' %}" class="w-100">
+                        <div class="form-group mb-3">
+                            <select class="form-control form-select" name="tag_id" required>
+                                <option value="" hidden>選択してください</option>
+                                
+                                {% for tag in tags %}
+                                {% if tag.id == tag_id %}
+                                <option value="{{ tag.id }}" selected>{{ tag.name }}</option>
+                                {% else %}
+                                <option value="{{ tag.id }}">{{ tag.name }}</option>
+                                {% endif %}
+                                {% endfor %}
+
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn search_btn text-white shadow-sm w-100">検索</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
