--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -3,11 +3,11 @@
         <div class="footer_ttl">
             <a href="/">NAGOYAMESHI</a>
         </div>
-        <!-- <div class="footer_link">
-                <a href="#">会社概要</a>
-                <a href="/terms/">利用規約</a>
-                <a href="/privacy/">プライバシーポリシー</a>
-        </div> -->
+        <div class="footer_link">
+                <a href="/">会社概要</a>
+                <a href="/">利用規約</a>
+                <a href="/">プライバシーポリシー</a>
+        </div>
     </div>
 </div>
 <div class="copy">
