--- a/templates/pages/restaurants_detail.html
+++ b/templates/pages/restaurants_detail.html
@@ -70,7 +70,7 @@
         </li>
     </ul>
 
-    <div class="tab-content border border-top-0 p-4 mb-4" id="detailTabsContent">
+    <div class="tab-content border border-top-0 p-2 mb-4" id="detailTabsContent">
 
         <div class="tab-pane fade show active" id="info" role="tabpanel" aria-labelledby="info-tab">
             <div class="" style="width: 90%; margin: 10px auto;">
@@ -151,7 +151,7 @@
                 <form action="{% url 'favorites_toggle02' pk=shop.pk %}" method="post" class="text-center">
                     <input type="hidden" name="_token" value="tjB5W1PEOhN7XNpbP52F7OIXJsWGo2woB3SLVgaz">
                         {% csrf_token %}
-                    <button type="submit" class="btn btn-danger shadow-sm w-50">♥ お気に入り解除</button>
+                    <button type="submit" class="btn btn-danger shadow-sm">♥ お気に入り解除</button>
                 </form>
                 {% endif %}
             </div>
